EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==08/10/2009==
WildcardX: Tweaked Groups a little to allow a group to consist of both Bots and Clients, doesn't matter what order you invite either nor does it matter how many of each.
WildcardX: *BOTS* A client camping out or zoning will now auto camp out all their bots and clean up any group those bots may have been in.
gaeorn: renamed zone->map to zone->zonemap to eliminate compile warning
gaeorn: added lots of type casting for 64bit compatibility
KLS: Added #revoke support to /auction and UCS chat channels.
KLS: Added rule Chat:KarmaGlobalChatLimit amount of karma needed to be able to chat in global channels below the minimum level and Chat:GlobalChatLevelLimit. By default the level is 8 and the karma amount equal to 24 hours of /played time. Meaning that unchanged someone must be >= level 8 or have more than a day of played time before they can chat in global channels.

==08/09/2009==
WildcardX: *BOTS* Fixed the bots illusion bug that caused a bots gender and race values to be changed to that of the illusion in the bots table.
WildcardX: *BOTS* Added new bots command, "#bot giveitem". This command lets you give a NO DROP, NO TRADE item to your bot as long as its on your cursor.
WildcardX: *BOTS* Added new commands, "#bot camp" and "#bot camp all". The first orders your bots to camp out if you target them. The second orders all bots you own to camp out, no need to target each.
Trevius: Created methods for when an NPC is spawned to clean up the NPC code some.
WildcardX: *BOTS* Fixed a bug caused by using #bot giveitem that didn't update the client that the iyem that was on the cursor is now gone.
WildcardX: *BOTS* Fixed a bug that crash the client when trading with a bot.
KLS: Fix for #ban
KLS: #ban will now update the player's flag and kick them from the server.

==08/08/2009==
WildcardX: *BOTS* More code refactoring.